# enum-to-string

./: Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/macros/src/: ast.rs  attrs.rs  dgen.rs  error.rs  expect.rs  lib.rs
crates/traits/: Cargo.toml
crates/traits/src/: lib.rs
examples/: no-auto-display-debug-impl.rs  straightforward.rs
src/: lib.rs
tests/: auto_impl_fmt.rs  debug.rs  nodebug.rs  variants.rs
