cargo-features = ["per-package-target", "edition2024"]

[package]
name = "og-enum-to-string"
version = "0.0.1"
edition = "2024"
description = "Provides the `EnumToString` derive macro which implements the methods `as_str()` and `as_dbg()` to enums with no associated values"
homepage = "https://github.com/gabrielfalcao/enum-to-string"
license = "MIT"
autobins = false
autoexamples = false
autobenches = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[workspace]
members = ["crates/*"]

[features]
default = []

[dependencies]
enum-to-string-macros = { path = "crates/macros", version = "0.0.1" }
enum-to-string-traits = { path = "crates/traits", version = "0.0.1" }
